<resources>
    <string name="app_name">Mandy Shoes</string>
    <string name="slogan">"Step into Style, Walk in Confidence with Mandy Shoes!"</string>
    <string name="init_button">Shop now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="instructions">Next</string>
    <string name="onboarding_description">Explore our latest collection of stylish and comfortable shoes.</string>
    <string name="onboarding_title">Welcome to Mandy Shoes</string>
    <string name="instructions_title">How to Use Mandy Shoes App</string>
    <string name="instructions_step_1">1. Explore our collection by tapping on the Browse button.</string>
    <string name="instructions_step_2">2. View details of a shoe by clicking on the respective item.</string>
    <string name="instructions_step_3">3. Add your favorite items to the cart for easy checkout.</string>
    <string name="start_button">Start Exploring</string>
    <string name="shoes_list_title">Click on the desired shoe to learn more</string>
    <string name="buy_button">Buy now</string>
    <string name="description_tenis">Versatile and comfortable sneakers suitable for various occasions. These sneakers provide a classic and timeless style, ensuring both style and comfort wherever you go.</string>
    <string name="description_high_heels">Elegant and chic high heels designed for a sophisticated and polished look. The timeless design and elevated heel add a touch of glamour to your outfit, making them perfect for special occasions and evenings out.</string>
    <string name="description_green_tenis">Stylish and comfortable green sneakers, perfect for a casual and trendy look. The vibrant green color adds a pop of freshness to your outfit, while the comfortable design ensures all-day wear. Step out in confidence with these fashion-forward green sneakers.</string>


</resources>