<?xml version="1.0" encoding="utf-8"?>
<!-- Utilizing LinearLayout for its simplicity and straightforward alignment of UI elements in relation to each other in a linear arrangement.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".home.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo_foreground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/shopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/init_button"
        android:textColor="@color/background" />


</LinearLayout>