<?xml version="1.0" encoding="utf-8"?>
<!-- I used Constraint Layout in this case because it's easier to insert the view that is below the text fields with Constraint Layout, as the text fields are placed on top of it-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="187dp"
        android:layout_height="186dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/logo_foreground" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/log_in"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="@id/rectangle"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_format"
        android:paddingStart="16dp" />

    <EditText
        android:id="@+id/editTextTextpasswordAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/login_format"
        android:paddingStart="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/login_button"
        android:textColor="@color/background"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextpasswordAddress"/>



</androidx.constraintlayout.widget.ConstraintLayout>
